finish index-html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 
     <!--Rodapé-->
     <footer class="site-info">
-                <h6>Developed by</h6>
+        <h6 class="devby">Developed by</h6>
+        <img src=".assets/github.png" class="githublogo" alt="Github logo">
+        <a href="https://github.com/raniel-lopes" class="raniel">/raniel-lopes</a>
     </footer>
+    <script src="app.js" defer></script>    </footer>
 </body>
 </html>
