--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <!-- Left Section: Input Area -->
             <div class="container__child__leftbox">
                 <div class="container__child__titleboxandtext">
-                <div class="continer__child__titlebox">
+                <div class="container__child__titlebox">
                     <img src="./assets/logo-bear.png" alt="Logo_bear" class="logo__topo">
                     <h1 class="container__child__title">Bear Text Decoder</h1>
                 </div>
@@ -41,7 +41,7 @@
                             <div class="container__child__texts">
                                     <h3 class="container__child__text1">No messages found</h3>
                                     <h4 class="container__child__text2">Please enter a message that you want to encrypt.</h4>
-                                    <button onclick="copyText()" class="copy-btn" id="copyButton">Copy</button>
+                                    <button onclick="copyText()" class="container__child__copybtn" id="copyButton">Copy</button>
                                 </div>
                             </div>
                         </div>
@@ -51,11 +51,11 @@
 
 
     <!--Rodapé-->
-    <footer class="site-info">
+    <footer class="site__info">
         <h6 class="devby">Developed by</h6>
-        <img src=".assets/github.png" class="githublogo" alt="Github logo">
+        <img src="./assets/github_icon.png" class="githublogo" alt="Github logo">
         <a href="https://github.com/raniel-lopes" class="raniel">/raniel-lopes</a>
     </footer>
-    <script src="app.js" defer></script>    </footer>
+    <script src="app.js" defer></script>
 </body>
 </html>
