--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                     <h1 class="container__child__title">Bear Text Decoder</h1>
                 </div>
                 <div class="caret"></div>
-                    <textarea class="container__child__input" placeholder="Type here..."></textarea>
-                        <p class="container__child__instruction">
+                <div class="container__child__leftbottom">
+                    <h5 class="container__child__input" placeholder="Type here..."></h5>
+                        <div class="container__child__instruction">
                             All special characters and accents will be removed, and all letters will be converted to lowercase.
-                        </p>
+                        </div>
                 <div class="container__child__btns">
                     <button onclick="encryptText()" class="btn">Encrypt</button>
                     <button onclick="decryptText()" class="btn">Decrypt</button>
